@startuml

title __NOTICEBOARD's Class Diagram__\n

  namespace com.woonders.lacemsjsf.view.noticeboard {
    class com.woonders.lacemsjsf.view.noticeboard.NoticeBoardDatatableView {
        {static} + JSF_NAME : String
        {static} + NAME : String
        {static} - COLOR_ROW : String
        - noticeBoardLazyDataModel : LazyDataModel<NoticeBoardViewModel>
        + getAziendaSelectionView()
        + getHttpSessionUtil()
        + getNoticeBoardLazyDataModel()
        + getNoticeBoardService()
        + getNoticeSelected()
        + getPassaggioParametriUtils()
        + getRowStyle()
        + init()
        + isColumnAziendaRendered()
        + onRowSelect()
        + setAziendaSelectionView()
        + setHttpSessionUtil()
        + setNoticeBoardLazyDataModel()
        + setNoticeBoardService()
        + setNoticeSelected()
        + setPassaggioParametriUtils()
    }
  }
  

  namespace com.woonders.lacemsjsf.view.noticeboard {
    class com.woonders.lacemsjsf.view.noticeboard.NoticeBoardPdf {
        {static} + JSF_NAME : String
        {static} + NAME : String
        + NoticeBoardPdf()
        + getAmazonS3FileService()
        + getIdFile()
        + getNoticeBoardService()
        + getPassaggioParametriUtils()
        + getPropertiesUtil()
        + getRequestTenantIdentifierResolver()
        + getStream()
        + setAmazonS3FileService()
        + setNoticeBoardService()
        + setPassaggioParametriUtils()
        + setPropertiesUtil()
        + setRequestTenantIdentifierResolver()
    }
  }
  

  namespace com.woonders.lacemsjsf.view.noticeboard {
    class com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView {
        {static} + JSF_NAME : String
        {static} + NAME : String
        {static} + PDF_SIZE_LIMIT : long
        {static} - MAX_TITLE_LENGTH : int
        {static} - NOTICE_MSG0 : String
        {static} - NOTICE_MSG1 : String
        {static} - NOTICE_MSG2_PLUS : String
        {static} - NUMBER_FILE_LIMIT : int
        - contents : byte[]
        - filename : String
        + deleteFile()
        + deleteNotice()
        + getAmazonS3FileService()
        + getAziendaSelectionView()
        + getContents()
        + getFilename()
        + getHttpSessionUtil()
        + getMaxTitleLength()
        + getNoticeBoardService()
        + getNoticeBoardViewModel()
        + getNumberFileLimit()
        + getPassaggioParametriUtils()
        + getPdfPage()
        + getPdfSizeLimit()
        + getPropertiesUtil()
        + getRequestTenantIdentifierResolver()
        + init()
        + isAziendaValueRendered()
        + isButtonAttachDisabled()
        + isButtonAttachRendered()
        + isButtonDeleteFileRendered()
        + isButtonDeleteRendered()
        + isButtonSaveRendered()
        + isButtonShowFileRendered()
        + isDatatableRendered()
        + isSelectedAziendaRendered()
        + listOfOperatorsViewThisNotice()
        + numberOfNoticeToDisplay()
        + numberOfNoticeToDisplayOnIcon()
        + numberOfNoticeToDisplayOnStyle()
        + save()
        + setAmazonS3FileService()
        + setAziendaSelectionView()
        + setContents()
        + setFilename()
        + setHttpSessionUtil()
        + setNoticeBoardService()
        + setNoticeBoardViewModel()
        + setNoticeIdToDisplayPdf()
        + setPassaggioParametriUtils()
        + setPropertiesUtil()
        + setRequestTenantIdentifierResolver()
        + upload()
        - numberOfNoticesToRead()
        - setInitialNotice()
    }
  }
  

  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardDatatableView .up.|> java.io.Serializable
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardDatatableView o-- com.woonders.lacemsjsf.view.aziendaselection.AziendaSelectionView : aziendaSelectionView
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardDatatableView o-- com.woonders.lacemsjsf.util.HttpSessionUtil : httpSessionUtil
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardDatatableView o-- com.woonders.lacemscommon.service.NoticeBoardService : noticeBoardService
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardDatatableView o-- com.woonders.lacemscommon.app.viewmodel.NoticeBoardViewModel : noticeSelected
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardDatatableView o-- com.woonders.lacemsjsf.util.PassaggioParametriUtils : passaggioParametriUtils
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardPdf .up.|> java.io.Serializable
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardPdf o-- com.woonders.lacemscommon.service.FileService : amazonS3FileService
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardPdf o-- com.woonders.lacemscommon.service.NoticeBoardService : noticeBoardService
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardPdf o-- com.woonders.lacemsjsf.util.PassaggioParametriUtils : passaggioParametriUtils
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardPdf o-- com.woonders.lacemsjsf.config.PropertiesUtil : propertiesUtil
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardPdf o-- com.woonders.lacemsjsf.db.app.config.RequestTenantIdentifierResolver : requestTenantIdentifierResolver
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardPdf o-- com.woonders.lacemsjsf.view.pdf.StreamPdf : stream
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView .up.|> java.io.Serializable
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView o-- com.woonders.lacemscommon.service.FileService : amazonS3FileService
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView o-- com.woonders.lacemsjsf.view.aziendaselection.AziendaSelectionView : aziendaSelectionView
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView o-- com.woonders.lacemsjsf.util.HttpSessionUtil : httpSessionUtil
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView o-- com.woonders.lacemscommon.service.NoticeBoardService : noticeBoardService
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView o-- com.woonders.lacemscommon.app.viewmodel.NoticeBoardViewModel : noticeBoardViewModel
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView o-- com.woonders.lacemsjsf.util.PassaggioParametriUtils : passaggioParametriUtils
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView o-- com.woonders.lacemsjsf.config.PropertiesUtil : propertiesUtil
  com.woonders.lacemsjsf.view.noticeboard.NoticeBoardView o-- com.woonders.lacemsjsf.db.app.config.RequestTenantIdentifierResolver : requestTenantIdentifierResolver


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
